# ece-417-598-project

./: README.md
04-04/code/: homography.cpp
attempt3_python/: ece_417_598_project.py  ece_417_598_project_static.py
attempt4_c++/: CMakeCache.txt  CMakeLists.txt  CornerDetection.cpp  DisplayImage  DisplayImage.cpp  Makefile  ProjectMain.cpp  cmake_install.cmake
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  camera_calibration_lab.pc  project_pack.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/camera_calibration_lab/cmake/: camera_calibration_labConfig.cmake
catkin_ws/devel/share/project_pack/cmake/: project_packConfig.cmake
catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/camera_calibration_lab/launch/: usb_cam-test.launch
catkin_ws/src/project_pack/: CMakeLists.txt  package.xml
project_standalone/garbage/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
